--- a/config
+++ b/config
@@ -1,8 +1,20 @@
-# ############################### YT-DLP CONFIG - READ FIRST ##########################################################
-# ALWAYS READ THE MANPAGE, HOWEVER THIS IS MY MOST COMMON SETUP.                                               #
-# <cmd>$ man yt-dlp #
+
+# ############################### OPTIMISEDU YT-DLP CONFIG - READ FIRST ##########################################################
+# ALWAYS READ THE MANPAGE, HOWEVER THIS IS MY MOST COMMON SETUP.                                               
+
+# <cmd>$ man yt-dlp 
 # Should work with no further steps but will print an error
-# ------------------------------------------------------------------------------------------------------------ #
+
+# ############################### IMPORTANT LEGAL WARNING ##########################################################
+
+# I DIDN'T CREATE YT-DLP - THIS IS A CONFIG FOR EDUCATIONAL PURPOSES ONLY. DOWNLOADS OF COPYRIGHTED MATERIAL IS ILLEGAL SO DO NOT ABUSE AND BE CAREFUL THAT YOU HAVE PERMISSION IF YOU USE THIS TO SCRAPE ANY PAGE.L
+
+# TODO:
+# 1. List useful cmds - tldr style
+# 2. Add ffmpeg / other external pkgs for quality and wav/mp3 audio extraction
+# 3. ytfzf suggested. implement fzy search params
+# 4. Setup shell script install and extend extra dependencies 
+
 # ##############################    FIRST STEPS    #############################################################
 #
 # This is one of my current config files for yt-dlp. it works but you will probably want to customise yourself.
